[package]
name = "gsfk-dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["gl","vulkan"]
gl = ["gsfk/gl"]
vulkan = ["gsfk/vulkan"]

[lib]
crate-type = ["cdylib","staticlib"]
name = "gsfk1"

[dependencies]
gsfk = { version = "0.1.0", path = "../gsfk" }
once_cell = "1.17.1"