[package]
name = "gsfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winey = { version = "0.1.0" }
raw-window-handle = "0.5.2"
ash = { version = "0.37.2+1.3.238", features = ["linked"] }
ash-window = "0.12.0"
gl = "0.14.0"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "windef",
    "ntdef",
    "winuser",
    "wingdi"
]

[target."cfg(unix)".dependencies.safex]
version = "0.0.5"
features = [
    "xlib",
    "glx"
]

[target."cfg(unix)".dependencies.x11]
version = "2.21.0"
features = [
    "glx"
]

[build-dependencies]
gl_generator = "0.14.0"